; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/fts3/tool/extr_fts3view.c_showDoclist.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/fts3/tool/extr_fts3view.c_showDoclist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@azExtra = common dso_local global i8** null, align 8
@SQLITE_ROW = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [45 x i8] c"Doclist at %s offset %lld of size %d bytes:\0A\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"raw\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @showDoclist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @showDoclist(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load i8**, i8*** @azExtra, align 8
  %10 = getelementptr inbounds i8*, i8** %9, i64 1
  %11 = load i8*, i8** %10, align 8
  %12 = call i32 @atoi64(i8* %11)
  store i32 %12, i32* %6, align 4
  %13 = load i8**, i8*** @azExtra, align 8
  %14 = getelementptr inbounds i8*, i8** %13, i64 2
  %15 = load i8*, i8** %14, align 8
  %16 = call i32 @atoi(i8* %15)
  store i32 %16, i32* %7, align 4
  %17 = load i32*, i32** %3, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = load i8**, i8*** @azExtra, align 8
  %20 = getelementptr inbounds i8*, i8** %19, i64 0
  %21 = load i8*, i8** %20, align 8
  %22 = call i32* @prepareToGetSegment(i32* %17, i8* %18, i8* %21)
  store i32* %22, i32** %8, align 8
  %23 = load i32*, i32** %8, align 8
  %24 = call i64 @sqlite3_step(i32* %23)
  %25 = load i64, i64* @SQLITE_ROW, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %30

27:                                               ; preds = %2
  %28 = load i32*, i32** %8, align 8
  %29 = call i32 @sqlite3_finalize(i32* %28)
  br label %58

30:                                               ; preds = %2
  %31 = load i32*, i32** %8, align 8
  %32 = call i8* @sqlite3_column_blob(i32* %31, i32 0)
  store i8* %32, i8** %5, align 8
  %33 = load i8**, i8*** @azExtra, align 8
  %34 = getelementptr inbounds i8*, i8** %33, i64 0
  %35 = load i8*, i8** %34, align 8
  %36 = load i32, i32* %6, align 4
  %37 = load i32, i32* %7, align 4
  %38 = call i32 @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i8* %35, i32 %36, i32 %37)
  %39 = call i64 @findOption(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 0, i32 0)
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %48

41:                                               ; preds = %30
  %42 = load i8*, i8** %5, align 8
  %43 = load i32, i32* %6, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds i8, i8* %42, i64 %44
  %46 = load i32, i32* %7, align 4
  %47 = call i32 @printBlob(i8* %45, i32 %46)
  br label %55

48:                                               ; preds = %30
  %49 = load i8*, i8** %5, align 8
  %50 = load i32, i32* %6, align 4
  %51 = sext i32 %50 to i64
  %52 = getelementptr inbounds i8, i8* %49, i64 %51
  %53 = load i32, i32* %7, align 4
  %54 = call i32 @decodeDoclist(i8* %52, i32 %53)
  br label %55

55:                                               ; preds = %48, %41
  %56 = load i32*, i32** %8, align 8
  %57 = call i32 @sqlite3_finalize(i32* %56)
  br label %58

58:                                               ; preds = %55, %27
  ret void
}

declare dso_local i32 @atoi64(i8*) #1

declare dso_local i32 @atoi(i8*) #1

declare dso_local i32* @prepareToGetSegment(i32*, i8*, i8*) #1

declare dso_local i64 @sqlite3_step(i32*) #1

declare dso_local i32 @sqlite3_finalize(i32*) #1

declare dso_local i8* @sqlite3_column_blob(i32*, i32) #1

declare dso_local i32 @printf(i8*, i8*, i32, i32) #1

declare dso_local i64 @findOption(i8*, i32, i32) #1

declare dso_local i32 @printBlob(i8*, i32) #1

declare dso_local i32 @decodeDoclist(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
